# ColorBuster

./: BoardView.qml  CMakeLists.txt  Game.h  GameOverScreen.qml  GameScreen.qml  GameView.qml  Main.qml  README.md  ScoreView.h  StartScreen.qml  TileView.qml  board.cpp  board.h  gamecontroller.cpp  gamecontroller.h  main.cpp  score.cpp  score.h  tile.cpp  tile.h  tilelistmodel.cpp  tilelistmodel.h  tilesortproxymodel.cpp  tilesortproxymodel.h  tiletablemodel.cpp  tiletablemodel.h  tileview.cpp  tileview.h
